[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/sprites/animated/shmick/friendlyprick_0001.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/animated/shmick/friendlyprick_0002.png" type="Texture" id=2]
[ext_resource path="res://assets/scripts/shmick.gd" type="Script" id=3]
[ext_resource path="res://assets/scripts/randompitch.gd" type="Script" id=4]
[ext_resource path="res://assets/sound/sfx/sfx_punch3.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/sfx/sfx_punch6.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/sfx/sfx_punch1.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/sfx/sfx_punch4.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/sfx/sfx_punch2.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/sfx/sfx_punch5.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sound/sfx/vox_impspeak.wav" type="AudioStream" id=11]
[ext_resource path="res://addons/VoiceGenerator/VoiceGeneratorAudioStreamPlayer2d.gd" type="Script" id=12]
[ext_resource path="res://assets/sprites/animated/shmick/friendlyprick_0003.png" type="Texture" id=13]
[ext_resource path="res://assets/shaders/color_flash.tres" type="Material" id=14]

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 11 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 12.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 26.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64, 32 )

[sub_resource type="Animation" id=5]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="shmick" type="KinematicBody2D"]
collision_layer = 10
collision_mask = 10
script = ExtResource( 3 )

[node name="speech" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 3 )
max_distance = 500.0
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 14 )
scale = Vector2( 0.56, 0.56 )
frames = SubResource( 1 )
animation = "die"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 19.5 )
shape = SubResource( 2 )

[node name="hurt1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -6.55
bus = "SFX"
script = ExtResource( 4 )

[node name="hurt2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -10.92
bus = "SFX"
script = ExtResource( 4 )

[node name="hurt3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 4 )

[node name="hurt4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 4 )

[node name="hurt5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 4 )

[node name="hurt6" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -7.424
bus = "SFX"
script = ExtResource( 4 )

[node name="playerdetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerdetect"]
position = Vector2( 0, 13 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 5 )

[connection signal="body_entered" from="playerdetect" to="." method="_on_playerdetect_body_entered"]
[connection signal="body_exited" from="playerdetect" to="." method="_on_playerdetect_body_exited"]
